apps/zitadel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zitadel
  labels:
    cloudlab.kerbaras.com/gateway-access: "true"
